# UPSync

./: .gitignore  Cargo.toml  README.md  install-client.sh  install-server.sh  install.sh  install.sh.save
src/: gui.rs  lib.rs  main.rs  server.rs  setup.rs
