[package]
name = "upsync"
version = "0.1.1"
edition = "2021"

authors = ["dhanush <dhanush@tutanota.de>"]  # List of authors
description = "UPSync converts non-smart UPS to smart UPS"
license = "GPL-2.0-only"
repository = "https://github.com/dhanushl0l/UPSync"

[dependencies]
battery = "*"
ssh2 = "*"
log = "*"
env_logger = "*"
serde_json = "*"
serde = { version = "*", features = ["derive"] }
gtk = { version = "0.9.5", package = "gtk4", features = ["v4_12"] }
tokio = { version = "1", features = ["full"] }